# rpggeek-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.scratch/rpggeek-mcp-server/: PRD.md
docs/: rpggeek-api.md
src/rpggeek_mcp/: __init__.py  __main__.py
src/rpggeek_mcp/commands/: base_command.py  test_command.py
src/rpggeek_mcp/console/: file_logging_protocol.py  main.py  rich_logging_protocol.py
src/rpggeek_mcp/mcp/: models.py  rpggeek_client.py  server.py
src/rpggeek_mcp/protocols/: __init__.py  command_protocol.py  logging_protocol.py
src/rpggeek_mcp/resources/: __init__.py  resource_loader.py
src/rpggeek_mcp/utils/: __init__.py  common_paths.py  datetimes.py  env.py  process_runner.py  text_fragments.py  tracer.py
tests/unit/: test_cli.py
tests/unit/mcp/: test_find_candidates.py  test_rpggeek_client.py
